# pika-algorithms

./: .cmake-format.py  .inshpect.toml  CHANGELOG.md  CMakeLists.txt  CTestConfig.cmake  README.rst  RELEASE_PROCEDURE.rst  pika-algorithms.spdx
.circleci/: config.yml
.github/: bors.toml
.github/workflows/: linux_coverage.yml  linux_debug.yml  linux_hip.yml  linux_release_fetchcontent.yml  linux_sanitizers.yml  linux_tracy.yml  macos_arm64_debug.yml  macos_debug.yml
.jenkins/cscs/: Jenkinsfile  batch.sh  ctest.cmake  entry.sh  env-cce.sh  env-clang-11.sh  env-clang-12.sh  env-clang-13.sh  env-clang-14-cuda.sh  env-clang-14.sh  env-clang-15.sh  env-common.sh  env-gcc-10-apex.sh  env-gcc-11.sh  env-gcc-12.sh  env-gcc-9.sh  env-gcc-cuda.sh
.jenkins/cscs-ault/: Jenkinsfile  batch.sh  ctest.cmake  entry.sh  env-common.sh  env-hipcc.sh
.jenkins/cscs-perftests/: Jenkinsfile  batch.sh  comment_github.sh  entry.sh  env-perftests.sh  launch_perftests.sh
cmake/: pika_algorithms_add_compile_flag.cmake  pika_algorithms_add_compile_test.cmake  pika_algorithms_add_config_test.cmake  pika_algorithms_add_definitions.cmake  pika_algorithms_add_executable.cmake  pika_algorithms_add_library.cmake  pika_algorithms_add_library_headers.cmake  pika_algorithms_add_library_sources.cmake  pika_algorithms_add_link_flag.cmake  pika_algorithms_add_pseudo_dependencies.cmake  pika_algorithms_add_pseudo_target.cmake  pika_algorithms_add_source_group.cmake  pika_algorithms_add_test.cmake  pika_algorithms_append_property.cmake  pika_algorithms_check_cxx_standard.cmake  pika_algorithms_compiler_flags_targets.cmake  pika_algorithms_export_targets.cmake  pika_algorithms_find_package.cmake  pika_algorithms_force_out_of_tree_build.cmake  pika_algorithms_forward_cache_variables.cmake  pika_algorithms_generate_package.cmake  pika_algorithms_generate_package_utils.cmake  pika_algorithms_git_commit.cmake  pika_algorithms_message.cmake  pika_algorithms_option.cmake  pika_algorithms_perform_cxx_feature_tests.cmake  pika_algorithms_print_summary.cmake  pika_algorithms_set_cmake_policy.cmake  pika_algorithms_set_lib_name.cmake  pika_algorithms_set_output_paths.cmake  pika_algorithms_setup_boost.cmake  pika_algorithms_setup_fmt.cmake  pika_algorithms_setup_pika.cmake  pika_algorithms_setup_target.cmake  pika_algorithms_shorten_pseudo_target.cmake  pika_algorithms_target_arch.cmake  pika_algorithms_utils.cmake
cmake/templates/: pika-algorithms-config.cmake.in  pika_algorithms_macros.cmake.in
examples/: CMakeLists.txt
examples/1d_stencil/: CMakeLists.txt
examples/hello_world_standalone/: CMakeLists.txt  hello_world.cpp
examples/quickstart/: CMakeLists.txt
examples/transpose/: CMakeLists.txt
include/pika/: algorithm.hpp  memory.hpp
include/pika/algorithms/traits/: projected.hpp  projected_range.hpp
include/pika/parallel/: datapar.hpp
include/pika/parallel/algorithms/: copy.hpp  count.hpp  ends_with.hpp  equal.hpp  exclusive_scan.hpp  find.hpp  includes.hpp  inclusive_scan.hpp  is_heap.hpp  is_sorted.hpp  lexicographical_compare.hpp  make_heap.hpp  merge.hpp  mismatch.hpp  nth_element.hpp  partial_sort.hpp  partial_sort_copy.hpp  partition.hpp  remove.hpp  remove_copy.hpp  replace.hpp  reverse.hpp  search.hpp  set_difference.hpp  set_intersection.hpp  set_symmetric_difference.hpp  set_union.hpp  sort.hpp  swap_ranges.hpp  transform.hpp  transform_exclusive_scan.hpp  transform_inclusive_scan.hpp  transform_reduce.hpp
include/pika/parallel/container_algorithms/: exclusive_scan.hpp  find.hpp  inclusive_scan.hpp  remove.hpp  remove_copy.hpp  replace.hpp  transform_exclusive_scan.hpp  transform_inclusive_scan.hpp  transform_reduce.hpp
include/pika/parallel/datapar/: adjacent_difference.hpp  fill.hpp  find.hpp  generate.hpp  iterator_helpers.hpp  loop.hpp  transfer.hpp  transform_loop.hpp  zip_iterator.hpp
include/pika/parallel/util/: loop.hpp  prefetching.hpp  (+6 more)
testing/performance_testing/: CMakeLists.txt
testing/testing/: CMakeLists.txt
tests/: CMakeLists.txt
tests/performance/: CMakeLists.txt  benchmark_is_heap.cpp  benchmark_partial_sort.cpp  benchmark_partial_sort_parallel.cpp  foreach_report.cpp  foreach_scaling.cpp  foreach_scaling_helpers.hpp
tests/performance/local/: CMakeLists.txt
tests/regressions/: CMakeLists.txt  count_3646.cpp  for_loop_2281.cpp  ranges_facilities.cpp  reduce_3641.cpp
tests/unit/: CMakeLists.txt
tests/unit/algorithms/: CMakeLists.txt  exclusive_scan.cpp  inclusive_scan_tests.hpp  parallel_sort.cpp  partition_tests.hpp  sort.cpp  sort_by_key.cpp  sort_exceptions.cpp  stable_sort.cpp  stable_sort_exceptions.cpp  transform_exclusive_scan.cpp  transform_inclusive_scan.cpp
tests/unit/algorithms/detail/: CMakeLists.txt  chunk_size_idx_iterator.cpp  chunk_size_iterator.cpp  test_insertion_sort.cpp  test_parallel_stable_sort.cpp  test_sample_sort.cpp  test_spin_sort.cpp
tests/unit/algorithms/util/: CMakeLists.txt
tests/unit/block/: CMakeLists.txt  spmd_block.cpp
tests/unit/container_algorithms/: CMakeLists.txt  adjacentdifference_range.cpp  distance.cpp  ends_with_range.cpp  exclusive_scan_range.cpp  fill_range.cpp  foreach_adapt.cpp  foreach_tests_projection.hpp  generate_range.cpp  inclusive_scan_range.cpp  lexicographical_compare_range.cpp  max_element_range.cpp  min_element_range.cpp  minmax_element_range.cpp  nth_element_range.cpp  partial_sort_copy_range.cpp  partial_sort_range.cpp  partition_copy_range.cpp  partition_range.cpp  reduce_range.cpp  remove_copy_if_range.cpp  remove_copy_range.cpp  remove_if_range.cpp  remove_range.cpp  replace_copy_if_range.cpp  replace_copy_range.cpp  replace_if_range.cpp  replace_range.cpp  reverse_copy_range.cpp  reverse_range.cpp  rotate_copy_range.cpp  rotate_range.cpp  shift_left_range.cpp  shift_right_range.cpp  sort_range.cpp  sort_range_tests.hpp  stable_partition_range.cpp  stable_sort_range.cpp  stable_sort_range_tests.hpp  starts_with_range.cpp  (+12 more)
tests/unit/datapar_algorithms/: CMakeLists.txt  foreach_datapar_zipiter.cpp
tools/: CMakeLists.txt  roll_release.sh
tools/perftests_ci/: CMakeLists.txt  driver.py
(+14 files in other folders)
